# cv-inference-server

./: .gitignore  CMakeLists.txt  README.md  test
benchmark-results/detect-20260713-232130/: summary.txt
include/: HTTPTypes.hpp  Router.hpp  TCPServer.hpp  ThreadPool.hpp  YOLODetector.hpp
python-fastapi-server/: README.md  requirements.txt
python-fastapi-server/app/: main.py  model.py
python-fastapi-server/scripts/: benchmark_detect.sh
scripts/: benchmark_detect.sh  build.sh  compare_detect_benchmarks.sh  download_models.sh
src/: Router.cpp  TCPServer.cpp  ThreadPool.cpp  YOLODetector.cpp  main.cpp
tests/detect-images/: README.md  checkerboard-3x3.ppm  gradient-4x2.ppm  solid-red-2x2.ppm
